--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Para Citlalli Fernandez Ventura</title>
+    <title>Para Citlalli</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,107 +13,108 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body class="mobile-optimized">
+    <!-- Orientation Message -->
     <div id="orientation-message">
-        <p class="playfair">Gira tu celular para jugar</p>
+        <div class="rotate-icon">🔄</div>
+        <p class="playfair">Gira tu celular para la experiencia completa</p>
     </div>
 
+    <!-- Background Music -->
     <audio id="bg-music" loop>
         <source src="audio.mp3" type="audio/mpeg">
     </audio>
 
-    <!-- Intro -->
-    <div id="intro-overlay" class="overlay">
-        <div class="intro-card">
-            <h1 class="dancing-script">Citlalli</h1>
-            <p class="playfair" style="color: white; margin-bottom: 2rem;">¿Quieres ser mi San Valentin?</p>
-            <div id="btn-hitbox" class="btn-container">
-                <button id="btn-yes" class="btn">Si</button>
-                <button id="btn-no" class="btn no-btn">No</button>
+    <!-- 1. Pantalla Inicial -->
+    <section id="phase-init" class="phase active">
+        <div class="init-card">
+            <p id="init-pre-text" class="playfair fade-in">Antes de empezar...<br>quiero preguntarte algo.</p>
+            <div id="init-question-container" class="hidden">
+                <p class="playfair question-text">¿Quieres ser mi San Valentín?</p>
+                <div id="btn-hitbox" class="btn-container">
+                    <button id="btn-yes" class="btn">Sí</button>
+                    <button id="btn-no" class="btn no-btn">No</button>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <main id="main-content" class="hidden">
-        <!-- Section 1: Hero & Real Bouquet -->
-        <section id="hero" class="section">
-            <div class="bouquet-container">
-                <div id="flower-bouquet"></div>
+    <!-- 2. Ritual Visual: El Ramo -->
+    <section id="phase-bouquet" class="phase bg-beige">
+        <div class="bouquet-ritual-container">
+            <div id="animated-bouquet"></div>
+            <p id="bouquet-text" class="playfair hidden">Para ti.</p>
+        </div>
+    </section>
+
+    <!-- 3. Contador -->
+    <section id="phase-counter" class="phase bg-beige">
+        <div class="counter-content">
+            <div class="timer">
+                <div class="time-block"><span id="years">00</span><small>años</small></div>
+                <div class="time-block"><span id="months">00</span><small>meses</small></div>
+                <div class="time-block"><span id="days">00</span><small>días</small></div>
+                <div class="time-block"><span id="hours">00</span><small>horas</small></div>
             </div>
-            <div class="hero-text">
-                <h2 class="dancing-script" style="font-size: 3rem; color: var(--vino);">Te quiero mucho</h2>
-                <div id="counter" class="counter-container">
-                    <div class="timer">
-                        <div class="time-block"><span id="days">00</span><small>Dias</small></div>
-                        <div class="time-block"><span id="hours">00</span><small>Horas</small></div>
-                        <div class="time-block"><span id="minutes">00</span><small>Minutos</small></div>
-                        <div class="time-block"><span id="seconds">00</span><small>Segundos</small></div>
-                    </div>
-                </div>
-            </div>
-        </section>
+            <p class="playfair counter-label">Desde que decidimos empezar.</p>
+        </div>
+    </section>
 
-        <!-- Section 2: Personal Album -->
-        <section id="album-section" class="section">
-            <div id="typewriter" class="typewriter-text playfair"></div>
-            <div class="moment-cards" id="album-container">
-                <!-- 15+ photos will be here -->
-            </div>
-        </section>
+    <!-- 4. La Carta -->
+    <section id="phase-letter" class="phase bg-beige">
+        <div class="letter-paper">
+            <div id="typewriter" class="playfair"></div>
+        </div>
+    </section>
 
-        <!-- Section 3: 30 Things I Love (Interactive) -->
-        <section id="love-list" class="section">
-            <h2 class="dancing-script" style="color: var(--vino); font-size: 3rem; margin-bottom: 2rem;">Cosas que amo
-                de ti</h2>
-            <div class="love-interactive-container" id="love-list-container">
-                <div id="love-item-display" class="love-card playfair">Toca para descubrir una de las 30 razones</div>
-                <button id="next-love-btn" class="btn"
-                    style="margin-top: 2rem; background: var(--vino); color: white;">Siguiente</button>
-            </div>
-        </section>
+    <!-- 5. Scroll Narrativo -->
+    <section id="phase-narrative" class="phase-scroll bg-beige">
+        <!-- Content will be injected via JS -->
+    </section>
 
-        <!-- Section 4: Video -->
-        <section id="video-section" class="section">
-            <div class="video-container">
-                <video controls width="100%" poster="Imagenes_Citla/20260108_203722.jpg">
-                    <source src="Imagenes_Citla/20260122_170710.mp4" type="video/mp4">
-                </video>
-            </div>
-        </section>
+    <!-- 6. 30 Cosas que me gustan de ti -->
+    <section id="phase-reasons" class="phase-reasons bg-beige">
+        <h2 class="playfair reasons-title">Cosas que me gustan de ti</h2>
+        <div id="reasons-container">
+            <!-- Cards will be injected via JS -->
+        </div>
+    </section>
 
-        <!-- Section 5: Original Rewards -->
-        <section id="gift-section" class="section">
-            <h2 class="playfair">Elige una sorpresa</h2>
-            <div class="gift-grid" id="gift-grid"></div>
-            <div id="gift-reveal" class="hidden">
-                <p id="selected-gift-text" class="dancing-script" style="font-size: 2rem; color: var(--vino);"></p>
-            </div>
-        </section>
+    <!-- 7. Elección: El Regalo -->
+    <section id="phase-gifts" class="phase bg-beige">
+        <h2 class="playfair gift-main-title">Elige uno.</h2>
+        <div class="gift-grid" id="gift-grid"></div>
+        <div id="gift-reveal" class="hidden">
+            <h3 class="playfair">Has elegido con éxito</h3>
+            <p id="selected-gift-text" class="playfair gift-final-desc"></p>
+        </div>
+    </section>
 
-        <!-- Section 6: Mario Style Game -->
-        <section id="game-intro-section" class="section">
-            <h2 class="dancing-script" style="font-size: 3.5rem; color: var(--olive);">Una aventura para nosotros</h2>
-            <button id="start-game-btn" class="btn" style="background: var(--olive); color: white;">Jugar</button>
-        </section>
+    <!-- 8. El Juego: Constancia -->
+    <section id="game-intro-screen" class="phase bg-midnight">
+        <h2 class="playfair section-title">Constancia</h2>
+        <p class="playfair intro-p">Esta es la historia de una tortuga marina que nunca se rinde.</p>
+        <button id="start-game-btn" class="btn">Empezar</button>
+    </section>
 
-        <section id="game-canvas-section" class="hidden">
-            <div id="inner-game-container">
-                <div id="game-ui">
-                    <div id="level-title" class="playfair">Nivel 1</div>
-                </div>
-                <canvas id="turtle-canvas"></canvas>
-                <div id="game-controls">
-                    <button class="ctrl-btn" id="btn-left">◀</button>
-                    <button class="ctrl-btn" id="btn-jump">JUMP</button>
-                    <button class="ctrl-btn" id="btn-right">▶</button>
-                </div>
-            </div>
-        </section>
+    <section id="game-canvas-screen" class="hidden">
+        <div id="game-ui-overlay">
+            <p id="level-display" class="playfair"></p>
+            <p id="game-tip" class="playfair">Toca la pantalla para saltar</p>
+        </div>
+        <div id="game-msg-container" class="hidden">
+            <p id="game-phase-msg" class="playfair"></p>
+        </div>
+        <canvas id="constancia-canvas"></canvas>
+    </section>
 
-        <footer style="padding: 4rem 1rem; text-align: center; background: var(--cream);">
-            <p class="playfair">Cada segundo contigo cuenta. Te amo.</p>
-        </footer>
-    </main>
+    <!-- Final -->
+    <section id="phase-final" class="phase bg-beige hidden">
+        <div class="final-card">
+            <p class="playfair final-quote">Gracias por caminar conmigo.</p>
+            <button id="restart-btn" class="btn btn-restart">Volver a empezar</button>
+        </div>
+    </section>
 
     <script src="script.js"></script>
 </body>
